# add-ticket-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  add_ticket.py  build.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
add_ticket_hook/: add_ticket.py  io.py  main.py
tests/: test_add_ticket_hook.py
