[tool.poetry]
name = "add_ticket_hook"
version = "0.1.0"
description = "Add ticket number to your git commit message."
authors = ["Antti Ruotsalainen <antti.ruotsalainen@vuoma.fi>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.17"
flake8 = "^3.7"
mypy = "^0.711.0"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"