[tool.poetry]
name = "add_ticket_hook"
version = "0.1.0"
description = "Add ticket number to your git commit message."
authors = ["Antti Ruotsalainen <antti.ruotsalainen@vuoma.fi>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.17"
flake8 = "^3.7"
mypy = "^0.711.0"
black = "=19.3b0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''